--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 #grid{
 	display:grid;
-	grid-template-columns:124px 124px 124px 124px 124px;
-	grid-template-rows: 82px 82px 82px 82px 82px;
+	grid-template-columns:242.5px 242.5px 242.5px 242.5px;
+	grid-template-rows: 124px 124px 124px 124px 124px;
 }
 #element-1{
 	grid-column:  span 4 / auto;
